# .emacs.d

./: .gitignore  .mc-lists.el  .org-id-locations  abbrev_defs  diredful-conf.el  init.el
cpp-lib-template/: CMakeLists.txt
cpp-project-template/: CMakeLists.txt
cpp-project-template/benchmark/: CMakeLists.txt  bench.cc
cpp-project-template/main/: CMakeLists.txt
cpp-project-template/src/: CMakeLists.txt  main.cc
cpp-project-template/test/: CMakeLists.txt
cpp-template/: CMakeLists.txt  main.cc  make-cpp-project  make_cpp_project  test.cc
cpp-template/foo/: CMakeLists.txt
cpp-template/foo/inc/: foo.hpp
cpp-template/foo/src/: foo.cc
cpp-template/foo/test/: footest.cc
cpp-template/main/: CMakeLists.txt
elpa/: auctex-11.88.3.signed  auctex-11.88.4.signed
elpa/anaconda-mode-20150313.655/: anaconda-mode-autoloads.el
elpa/async-20150203.2127/: async-autoloads.el
elpa/async-20150412.2207/: async-autoloads.el
elpa/auctex-11.88.3/: auctex-autoloads.el
elpa/auctex-11.88.4/: auctex-autoloads.el
elpa/auto-complete-20150322.813/: auto-complete-autoloads.el
elpa/auto-complete-20150408.1132/: auto-complete-autoloads.el
elpa/auto-highlight-symbol-20130313.243/: auto-highlight-symbol-autoloads.el
elpa/autopair-20140825.427/: autopair-autoloads.el
elpa/bash-completion-20150328.837/: bash-completion-autoloads.el
mypackages/: c++-doxygen-mode.el  my-compile.el  window-layout.el
semanticdb/: !home!peter!shr!msp430fr5739!semantic.cache  !home!peter!shr!semantic.cache  !home!peter!workspace!msp430!MMC_lib!semantic.cache  !home!peter!workspace!msp430!fatfs!src!option!semantic.cache  !home!peter!workspace!msp430!fatfs!src!semantic.cache  !home!peter!workspace!msp430!framtest!semantic.cache  !home!peter!workspace!msp430!microfat!semantic.cache  !home!peter!workspace!msp430!mmc!semantic.cache  !home!peter!workspace!msp430!mmclib!MMC_lib!semantic.cache  !home!peter!workspace!msp430!mmclib!usage_example_IAR!semantic.cache  !home!peter!workspace!msp430!semantic.cache  !home!peter!workspace!msp430!tffs-lib-read-only!inc!semantic.cache  !home!peter!workspace!msp430!tffs-lib-read-only!src!semantic.cache  !home!peter!workspace!msp430!tffs-lib-read-only!tshell!semantic.cache  !tmp!MMC_lib!semantic.cache  !tmp!semantic.cache  !usr!include!c++!4.7!backward!semantic.cache  !usr!include!c++!4.7!bits!semantic.cache  !usr!include!c++!4.7!debug!semantic.cache  !usr!include!c++!4.7!ext!semantic.cache  !usr!include!c++!4.7!semantic.cache  !usr!include!c++!4.7!x86_64-linux-gnu!bits!semantic.cache  !usr!include!semantic.cache  !usr!include!x86_64-linux-gnu!bits!semantic.cache  !usr!include!x86_64-linux-gnu!gnu!semantic.cache  !usr!include!x86_64-linux-gnu!sys!semantic.cache  !usr!lib!gcc!x86_64-linux-gnu!4.7!include!semantic.cache  !usr!msp430!include!bits!semantic.cache  !usr!msp430!include!semantic.cache  !usr!msp430!include!sys!semantic.cache
url/: cookies
(+52 files in other folders)
